# bitcoin-address-generator-api

./: Cargo.toml  LICENSE
src/: main.rs  pages.rs
src/accounts/views/: login.rs  mod.rs  verify.rs
src/api/: mod.rs
src/api/views/: generate.rs  mod.rs
src/dashboard/views/: dashboard.rs
