[package]
name = "bitcoin-address-generator-api"
version = "0.1.0"
authors = ["Denis Bobrov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-url = "1.4.10"
jelly = { path = "jelly" }
log = "*"
serde = { version = "1" }
secp256k1 = {version = "0.20.1", features = ["rand"]}
rand = {version = "0.6.5", features = ["std"]}
bitcoin = "0.26.0"

[features]
default = ["jelly/template_watcher", "jelly/static"]
production = ["jelly/production"]
#rand = ["secp256k1/rand-std"]